crates/test-files/fixtures/compile_errors/ctx_missing_load.fe
use std::context::Context

contract Foo:
    pub fn bar():
        pass

contract Bar:
    pub fn create_foo(ctx: Context):
        Foo(0)
